rendered/envs/friclu/alloy/daemonset-alloy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: alloy
    app.kubernetes.io/part-of: alloy
    app.kubernetes.io/version: v1.11.3
    helm.sh/chart: alloy-1.4.0
  name: alloy
  namespace: alloy
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: alloy
      app.kubernetes.io/name: alloy
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: alloy
      labels:
        app.kubernetes.io/instance: alloy
        app.kubernetes.io/name: alloy
    spec:
      containers:
        - args:
            - run
            - /etc/alloy/config.alloy
            - --storage.path=/tmp/alloy
            - --server.http.listen-addr=0.0.0.0:12345
            - --server.http.ui-path-prefix=/
            - --stability.level=generally-available
          image: docker.io/grafana/alloy:v1.11.3
          imagePullPolicy: IfNotPresent
          name: alloy
          ports:
            - containerPort: 12345
              name: http-metrics
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 12345
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/alloy
              name: config
        - args:
            - --watched-dir=/etc/alloy
            - --reload-url=http://localhost:12345/-/reload
          image: quay.io/prometheus-operator/prometheus-config-reloader:v0.81.0
          name: config-reloader
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          volumeMounts:
            - mountPath: /etc/alloy
              name: config
      dnsPolicy: ClusterFirst
      serviceAccountName: alloy
      volumes:
        - configMap:
            name: alloy
          name: config
