rendered/envs/friclu/alloy/service-alloy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: alloy
    app.kubernetes.io/part-of: alloy
    app.kubernetes.io/version: v1.11.3
    helm.sh/chart: alloy-1.4.0
  name: alloy
  namespace: alloy
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http-metrics
      port: 12345
      protocol: TCP
      targetPort: 12345
    - name: otel-grpc
      port: 4317
      protocol: TCP
      targetPort: 4317
  selector:
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/name: alloy
  type: ClusterIP
