rendered/envs/friclu/alloy/ingress-alloy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: alloy
    app.kubernetes.io/part-of: alloy
    app.kubernetes.io/version: v1.11.3
    helm.sh/chart: alloy-1.4.0
  name: alloy
  namespace: alloy
spec:
  ingressClassName: nginx
  rules:
    - host: alloy.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: alloy
                port:
                  number: 12345
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alloy.duchardt.net
      secretName: alloy-certificate
